--- a/STM.GDA.Web/Views/Composant/Index.cshtml
+++ b/STM.GDA.Web/Views/Composant/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <h2>Liste des applications et services</h2> 
-<button type="button" id="btnCreer" class="btn btn-default">Créer une application ou un service</button>
+<button type="button" id="btnCreer" class="btn btn-default margin-bottom">Créer une application ou un service</button>
 
 <div class="divListe">
     <div class="search-group">
