--- a/STM.GDA.Web/Content/Site.css
+++ b/STM.GDA.Web/Content/Site.css
@@ -14,11 +14,23 @@
 	margin-top: 2rem;
 }
 
+.chosen-container {
+	margin-bottom: 1rem;
+}
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
 .dl-horizontal dt {
 	white-space: normal;
+}
+
+.full-height {
+	height: 100%;
+}
+
+.margin-bottom {
+	margin-bottom: 1rem;
 }
 
 h2 {
