--- a/STM.GDA.Web/Views/Composant/_ModifierDependances.cshtml
+++ b/STM.GDA.Web/Views/Composant/_ModifierDependances.cshtml
@@ -4,7 +4,7 @@
 <h3>Environnements</h3>
 @Html.DropDownList("ddlEnvironnement", Model.EnvironnementsItems, new { @class = "form-control" })
 
-<div id="divDependance" class="border marging-top">
+<div id="divDependance" class="form-control full-height marging-top padding-top">
     @for (int i = 0; i < Model.DependancesByEnvironnement.Count(); i++)
     {
         <div class="envTab">
