--- a/STM.GDA.Web/Content/Site.css
+++ b/STM.GDA.Web/Content/Site.css
@@ -97,3 +97,41 @@ h2 {
     padding: 0 !important;
     margin: 0 !important;
 }
+
+
+
+.tags {
+    padding: 5px 15px 0 15px;
+}
+
+.tag {
+    background-color: rgba(254, 228, 4, 0.05);
+    border: 1px solid rgba(254, 228, 4, 0.6);
+    color: #555;
+    text-align: center;
+    margin-right: 3px;
+    display: inline-block;
+    padding: 0 10px;
+    margin-bottom: 5px;
+    box-shadow: 3px 2px 5px rgba(0, 0, 0, .075);
+}
+
+select.tag-select option {
+    background-color: rgba(254, 228, 4, 0.05);
+    border: 1px solid rgba(254, 228, 4, 0.6);
+    color: #555;
+    text-align: center;
+    margin: 3px;
+    display: inline-block;
+    padding: 2px 10px;
+    margin-bottom: 5px;
+    box-shadow: 3px 2px 5px rgba(0, 0, 0, .075);
+}
+
+select.tag-select option::after {
+    content: '\e014';
+    display: inline;
+    font-family: 'Glyphicons Halflings';
+    margin-left: 10px;
+    font-size: 10px;
+}
