--- a/STM.GDA.Web/Views/Composant/_DetailsDependances.cshtml
+++ b/STM.GDA.Web/Views/Composant/_DetailsDependances.cshtml
@@ -9,7 +9,10 @@
                 @Html.DisplayNameFor(x => environnementInfo.Web)
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                @Html.DisplayFor(x => environnementInfo.WebText)
+                @foreach (var dep in environnementInfo.Web)
+                {
+                    <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
+                }
             </div>
         </div>
 
@@ -18,7 +21,10 @@
                 @Html.DisplayNameFor(x => environnementInfo.BDs)
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                @Html.DisplayFor(x => environnementInfo.BDsText)
+                @foreach (var dep in environnementInfo.BDs)
+                {
+                    <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
+                }
             </div>
         </div>
 
@@ -27,7 +33,10 @@
                 @Html.DisplayNameFor(x => environnementInfo.Rapports)
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                @Html.DisplayFor(x => environnementInfo.RapportsText)
+                @foreach (var dep in environnementInfo.Rapports)
+                {
+                    <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
+                }
             </div>
         </div>
 
@@ -36,7 +45,10 @@
                 @Html.DisplayNameFor(x => environnementInfo.Interfaces)
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                @Html.DisplayFor(x => environnementInfo.InterfacesText)
+                @foreach (var dep in environnementInfo.Interfaces)
+                {
+                    <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
+                }
             </div>
         </div>
 
@@ -45,7 +57,10 @@
                 @Html.DisplayNameFor(x => environnementInfo.Jobs)
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                @Html.DisplayFor(x => environnementInfo.JobsText)
+                @foreach (var dep in environnementInfo.Jobs)
+                {
+                    <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
+                }
             </div>
         </div>
 
@@ -54,7 +69,10 @@
                 @Html.DisplayNameFor(x => environnementInfo.Externes)
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
-                @Html.DisplayFor(x => environnementInfo.ExternesText)
+                @foreach (var dep in environnementInfo.Externes)
+                {
+                    <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
+                }
             </div>
         </div>
     </div>
