title style fix pour Philippe

--- a/STM.GDA.Web/Views/Composant/Index.cshtml
+++ b/STM.GDA.Web/Views/Composant/Index.cshtml
@@ -2,13 +2,12 @@
     <link href="@Url.Content("~/Content/Composant.css")" rel="stylesheet" type="text/css" />
 }
 
-<h2>Liste des applications et services</h2>
+<h2>
+    <span class="title">Liste des applications et services</span>
+    <button type="button" id="btnCreer" class="btn btn-primary pull-right">Créer une application ou un service</button>
+</h2>
 
-<div class="divListe row">
-    <div class="action-group">
-        <button type="button" id="btnCreer" class="btn btn-primary">Créer une application ou un service</button>
-    </div>
-       
+<div class="divListe">
     <div class="search-group">
         <div class="search-input input-group">
             <span class="input-group-addon transparent"><span class="glyphicon glyphicon-search"></span></span>
