--- a/STM.GDA.Web/Views/Composant/_DetailsDependances.cshtml
+++ b/STM.GDA.Web/Views/Composant/_DetailsDependances.cshtml
@@ -5,10 +5,10 @@
 {
     <div class="envTab" >
         <div class="value row">
-            <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+            <div class="col-xs-12 col-sm-3 sm-right-align bold">
                 @Html.DisplayNameFor(x => environnementInfo.Web)
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-9">
+            <div class="col-xs-12 col-sm-9">
                 @foreach (var dep in environnementInfo.Web)
                 {
                     <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
@@ -17,10 +17,10 @@
         </div>
 
         <div class="value row">
-            <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+            <div class="col-xs-12 col-sm-3 sm-right-align bold">
                 @Html.DisplayNameFor(x => environnementInfo.BDs)
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-9">
+            <div class="col-xs-12 col-sm-9">
                 @foreach (var dep in environnementInfo.BDs)
                 {
                     <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
@@ -29,10 +29,10 @@
         </div>
 
         <div class="value row">
-            <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+            <div class="col-xs-12 col-sm-3 sm-right-align bold">
                 @Html.DisplayNameFor(x => environnementInfo.Rapports)
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-9">
+            <div class="col-xs-12 col-sm-9">
                 @foreach (var dep in environnementInfo.Rapports)
                 {
                     <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
@@ -41,10 +41,10 @@
         </div>
 
         <div class="value row">
-            <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+            <div class="col-xs-12 col-sm-3 sm-right-align bold">
                 @Html.DisplayNameFor(x => environnementInfo.Interfaces)
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-9">
+            <div class="col-xs-12 col-sm-9">
                 @foreach (var dep in environnementInfo.Interfaces)
                 {
                     <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
@@ -53,10 +53,10 @@
         </div>
 
         <div class="value row">
-            <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+            <div class="col-xs-12 col-sm-3 sm-right-align bold">
                 @Html.DisplayNameFor(x => environnementInfo.Jobs)
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-9">
+            <div class="col-xs-12 col-sm-9">
                 @foreach (var dep in environnementInfo.Jobs)
                 {
                     <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
@@ -65,10 +65,10 @@
         </div>
 
         <div class="value row">
-            <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+            <div class="col-xs-12 col-sm-3 sm-right-align bold">
                 @Html.DisplayNameFor(x => environnementInfo.Externes)
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-9">
+            <div class="col-xs-12 col-sm-9">
                 @foreach (var dep in environnementInfo.Externes)
                 {
                     <span class="tag">@Html.DisplayFor(m => dep.Etiquette.Nom)</span>
