--- a/STM.GDA.Web/Views/Composant/_ModifierDependances.cshtml
+++ b/STM.GDA.Web/Views/Composant/_ModifierDependances.cshtml
@@ -1,82 +1,91 @@
 ﻿@using STM.GDA.Web.Models
 @model ComposantModel
 
-<h3>Environnements</h3>
-@Html.DropDownList("ddlEnvironnement", Model.EnvironnementsItems, new { @class = "form-control" })
+<h3>Dépendances</h3>
 
-<div id="divDependance" class="form-control full-height marging-top padding-top">
+<div class="row">
+    <div class="col-xs-12 col-sm-3 sm-right-align bold">
+        Environnement
+    </div>
+    <div class="col-xs-12 col-sm-9">
+        @Html.DropDownList("ddlEnvironnement", Model.EnvironnementsItems, new { @class = "form-control" })
+    </div>
+</div>
+
+
+<div id="divDependance" class="full-height marging-top padding-top">
     @for (int i = 0; i < Model.DependancesByEnvironnement.Count(); i++)
     {
         <div class="envTab">
             <div class="value row">
-                <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+                <div class="col-xs-12 col-sm-3 sm-right-align bold">
                     @Html.DisplayNameFor(x => Model.DependancesByEnvironnement[i].Web)
                 </div>
-                <div class="col-xs-12 col-sm-8 col-md-9">
+                <div class="col-xs-12 col-sm-9">
                     @Html.ListBox("environnement-Web-" + i.ToString(),
-                                                 new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesServeurs,
-                                                 "Value", "Text", Model.DependancesByEnvironnement[i].Web.Select(x => x.Etiquette.Id)),
-                                                 new { @class = "form-control listeChosen not-initialize" })
+                                                        new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesServeurs,
+                                                        "Value", "Text", Model.DependancesByEnvironnement[i].Web.Select(x => x.Etiquette.Id)),
+                                                        new { @class = "form-control listeChosen not-initialize" })
                 </div>
             </div>
 
             <div class="value row">
-                <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+                <div class="col-xs-12 col-sm-3 sm-right-align bold">
                     @Html.DisplayNameFor(x => Model.DependancesByEnvironnement[i].BDs)
                 </div>
-                <div class="col-xs-12 col-sm-8 col-md-9">
+                <div class="col-xs-12 col-sm-9">
                     @Html.ListBox("environnement-BDs-" + i.ToString(),
-                                                 new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesServeurs,
-                                                 "Value", "Text", Model.DependancesByEnvironnement[i].BDs.Select(x => x.Etiquette.Id)),
-                                                 new { @class = "form-control listeChosen not-initialize" })
+                                                        new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesServeurs,
+                                                        "Value", "Text", Model.DependancesByEnvironnement[i].BDs.Select(x => x.Etiquette.Id)),
+                                                        new { @class = "form-control listeChosen not-initialize" })
                 </div>
             </div>
 
             <div class="value row">
-                <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+                <div class="col-xs-12 col-sm-3 sm-right-align bold">
                     @Html.DisplayNameFor(x => Model.DependancesByEnvironnement[i].Rapports)
                 </div>
-                <div class="col-xs-12 col-sm-8 col-md-9">
+                <div class="col-xs-12 col-sm-9">
                     @Html.ListBox("environnement-Rapports-" + i.ToString(),
-                                                 new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesServeurs,
-                                                 "Value", "Text", Model.DependancesByEnvironnement[i].Rapports.Select(x => x.Etiquette.Id)),
-                                                 new { @class = "form-control listeChosen not-initialize" })
+                                                        new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesServeurs,
+                                                        "Value", "Text", Model.DependancesByEnvironnement[i].Rapports.Select(x => x.Etiquette.Id)),
+                                                        new { @class = "form-control listeChosen not-initialize" })
                 </div>
             </div>
 
             <div class="value row">
-                <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+                <div class="col-xs-12 col-sm-3 sm-right-align bold">
                     @Html.DisplayNameFor(x => Model.DependancesByEnvironnement[i].Interfaces)
                 </div>
-                <div class="col-xs-12 col-sm-8 col-md-9">
+                <div class="col-xs-12 col-sm-9">
                     @Html.ListBox("environnement-Interfaces-" + i.ToString(),
-                                                 new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesAutres,
-                                                 "Value", "Text", Model.DependancesByEnvironnement[i].Interfaces.Select(x => x.Etiquette.Id)),
-                                                 new { @class = "form-control listeChosen not-initialize" })
+                                                        new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesAutres,
+                                                        "Value", "Text", Model.DependancesByEnvironnement[i].Interfaces.Select(x => x.Etiquette.Id)),
+                                                        new { @class = "form-control listeChosen not-initialize" })
                 </div>
             </div>
 
             <div class="value row">
-                <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+                <div class="col-xs-12 col-sm-3 sm-right-align bold">
                     @Html.DisplayNameFor(x => Model.DependancesByEnvironnement[i].Jobs)
                 </div>
-                <div class="col-xs-12 col-sm-8 col-md-9">
+                <div class="col-xs-12 col-sm-9">
                     @Html.ListBox("environnement-Jobs-" + i.ToString(),
-                                                 new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesAutres,
-                                                 "Value", "Text", Model.DependancesByEnvironnement[i].Jobs.Select(x => x.Etiquette.Id)),
-                                                 new { @class = "form-control listeChosen not-initialize" })
+                                                        new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesAutres,
+                                                        "Value", "Text", Model.DependancesByEnvironnement[i].Jobs.Select(x => x.Etiquette.Id)),
+                                                        new { @class = "form-control listeChosen not-initialize" })
                 </div>
             </div>
 
             <div class="value row">
-                <div class="col-xs-12 col-sm-4 col-md-3 sm-right-align bold">
+                <div class="col-xs-12 col-sm-3 sm-right-align bold">
                     @Html.DisplayNameFor(x => Model.DependancesByEnvironnement[i].Externes)
                 </div>
-                <div class="col-xs-12 col-sm-8 col-md-9">
+                <div class="col-xs-12 col-sm-9">
                     @Html.ListBox("environnement-Externes-" + i.ToString(),
-                                                 new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesAutres,
-                                                 "Value", "Text", Model.DependancesByEnvironnement[i].Externes.Select(x => x.Etiquette.Id)),
-                                                 new { @class = "form-control listeChosen not-initialize" })
+                                                        new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeDependancesAutres,
+                                                        "Value", "Text", Model.DependancesByEnvironnement[i].Externes.Select(x => x.Etiquette.Id)),
+                                                        new { @class = "form-control listeChosen not-initialize" })
                 </div>
             </div>
         </div>
