--- a/STM.GDA.Web/Views/Composant/Creer.cshtml
+++ b/STM.GDA.Web/Views/Composant/Creer.cshtml
@@ -129,8 +129,8 @@
                 @Html.Action("GetModifierDependances", new { composant = Model })
             </div>
 
-            <div class="col-md-12">
-                <button type="button" id="btnCreer" class="btn btn-default">Créer</button>
+            <div class="col-md-12 align-right padding-top">
+                <button type="button" id="btnCreer" class="btn btn-primary">Créer</button>
             </div>
         </div>
 
