--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -3,7 +3,7 @@
 }
 
 @model STM.GDA.Web.Models.ComposantModel
-<div class="container container-details">
+<div class="container">
 	@Html.ActionLink("Retour à la liste", "Index") <br>
     <div class="col-md-5">
 
