--- a/STM.GDA.Web/Views/Composant/Modifier.cshtml
+++ b/STM.GDA.Web/Views/Composant/Modifier.cshtml
@@ -6,7 +6,7 @@
 }
 
 @model STM.GDA.Web.Models.ComposantModel
-	<div class="container container-details">
+	<div class="container">
 		@Html.ActionLink("Retour à la liste", "Index")
 		<form id="formModification">
 			<div class="col-md-5">
