Suppression d'un composant (ajout d'une date de suppression). Si le composant possède une date de suppression, il n'est plus affiché dans la liste.

--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -173,4 +173,13 @@
     $("#btnModifier").click(function () {
         window.location.href = '@Url.Action("Modifier", "Composant", new { id = @Html.Raw(Json.Encode(Model.Id)) })';
     });
+
+    $("#btnSupprimer").click(function () {
+        if (confirm("Voulez-vous vraiment supprimer ce componsant?")) {
+             CallController(
+                "@Url.Action("Supprimer", "Composant")",
+                { Id: @Html.Raw(Json.Encode(Model.Id)) }
+            );
+        }
+    });
 </script>
