Modifier les contrôles des technologie pour un multi selection chosen comme pour client et responsable

--- a/STM.GDA.Web/Views/Composant/Modifier.cshtml
+++ b/STM.GDA.Web/Views/Composant/Modifier.cshtml
@@ -177,7 +177,7 @@
                         SourceControlPath: $("#SourceControlPath").val(),
                         BC: $("#BC").val(),
                         BW: $("#BW").val(),
-                        Technologies: getAllItems("TechnologiesSelectionnees"),
+                        Technologies: getSelectedItems("TechnologiesSelectionnes"),
                         Dependances: getDependanceEnvironnement()
                     }
                 }
