--- a/STM.GDA.Web/Views/Composant/Creer.cshtml
+++ b/STM.GDA.Web/Views/Composant/Creer.cshtml
@@ -173,7 +173,7 @@
                         SourceControlPath: $("#SourceControlPath").val(),
                         BC: $("#BC").val(),
                         BW: $("#BW").val(),
-                        Technologies: getAllItems("TechnologiesSelectionnees"),
+                        Technologies: getSelectedItems("TechnologiesSelectionnes"),
                         Dependances: getDependanceEnvironnement()
                     }
                 }
